<resources>
    <string name="app_name">爱包车</string>

    <string name="edit_hint_search">搜索车票、地点信息</string>
    <string name="new_route">最新路线</string>
    <string name="same_people">同路人</string>
    <string name="home_guide">回家指南</string>
    <string name="ticket_circle">票圈</string>
    <string name="relax_travel">轻旅游</string>
    <string name="ticket_title">车票详情</string>
    <string name="principal">负责人</string>
    <string name="test_principal">小明</string>
    <string name="call">电话</string>
    <string name="test_call">12380128470</string>
    <string name="carNumber">车牌号</string>
    <string name="test_carNumber">124019740974091</string>
    <string name="surplus">票余</string>
    <string name="price">票价：￥</string>
    <string name="test_price">80</string>
    <string name="test_start_place">粤垦农行</string>
    <string name="test_end_place">农工商(中新)</string>
    <string name="test_time">2017-10-22 10:30</string>
    <string name="choice">选择数量</string>
    <string name="buy">购买</string>
    <string name="text_now_login">正在加载</string>
    <string name="search_result">搜索详情</string>
    <string name="start_place">请输入上车地点</string>
    <string name="end_place">你要去哪儿</string>
    <string name="search_history">历史查询</string>
    <string name="search">确定查询</string>
    <string name="query">搜索</string>
    <string name="time">出发时间</string>
    <string name="all_money">合计金额：</string>
    <string name="test_phone">手机号</string>
    <string name="login">登陆</string>
    <string name="password">密码</string>
    <string name="find_password">找回密码?</string>
    <string name="remember_password">记住密码</string>
    <string name="register">立即注册</string>
    <string name="lovecar">爱包车</string>
    <string name="car">车</string>
    <string name="password_suggest">密码需要6-18位 建议使用字母或数字或符号组合</string>
    <string name="input_password">请输入密码</string>
    <string name="input_nickname">请输入用户名/昵称</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_code">请输入验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="agree_protocol">注册即表示同意《爱包车服务协议》</string>
    <string name="input_pw_again">请确认密码</string>
    <string name="news">消息</string>
    <string name="main">首页</string>
    <string name="order">订单</string>
    <string name="my">我的</string>
    <string name="statistics">统计</string>
    <string name="chat">聊天</string>
    <string name="test_people">张学友</string>
    <string name="chat_principal">负责人</string>
    <string name="love">收藏</string>
    <string name="send">发送</string>
    <string name="send_fail">消息发送失败</string>
    <string name="my_like">我的收藏</string>
    <string name="my_wallet">我的钱包</string>
    <string name="check_update">检查更新</string>
    <string name="login_out">退出登录</string>
    <string name="about_us">关于我们</string>
    <string name="help_center">帮助中心</string>
    <string name="setting">设置</string>
    <string name="my_imformation">个人信息</string>
    <string name="account_password">账号与安全</string>
    <string name="certified">已认证</string>
    <string name="my_icon">头像</string>
    <string name="nick_name">昵称</string>
    <string name="phone">手机</string>
    <string name="school">学校</string>
    <string name="change_password">修改密码</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="please_choice">请选择</string>
    <string name="photograph">拍照</string>
    <string name="picture">图库</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑资料</string>
    <string name="nfilled">未填写</string>
    <string name="right">确定</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="test_number">1252356346</string>
    <string name="element">元</string>
    <string name="refresh_finish">刷新完成</string>
    <string name="not_tickets">您还没有相关的订单</string>
    <string name="tips">可以去看看有哪些车票</string>
    <string name="network_fail">网络异常，请检查网络</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="down_line_titles">下线通知</string>
    <string name="down_line_tips">您的爱包车账号在另一地点登陆，您被迫下线. 如果不是您本人的操作，那么您的密码很可能已经泄露。</string>
    <string name="unpaid">未付款</string>
    <string name="order_number">订单号：</string>
    <string name="order_create_time">下单时间：</string>
    <string name="contacts">联系人</string>
    <string name="id">身份证</string>
    <string name="cancel_order">取消订单</string>
    <string name="payment">付款</string>
    <string name="order_detail">订单详情</string>
    <string name="my_publish">我发布的</string>
    <string name="remarks">备注</string>
    <string name="test_remarks">每人7块 还差两个人，花园小区，同小区最好每人7块 还差两个人，花园小区，同小区最好</string>
    <string name="surplus_people">剩余名额</string>
    <string name="detail_place">详细地址</string>
    <string name="input_detail_place">请输入详细地址</string>
    <string name="name">姓名</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_car_number">请输入车牌号</string>
    <string name="publish">发布</string>
    <string name="input_time">请选择时间</string>
    <string name="input_price">请输入票价</string>
    <string name="input_empty_info">请输入完整信息</string>
    <string name="seat">座</string>
    <string name="seat_number">数量</string>
    <string name="ticket_moments">票圈</string>
    <string name="publish_suc">发布成功</string>
    <string name="look">查看</string>
    <string name="delete">删除</string>
    <string name="crowd_tip">购票人群分析</string>
</resources>
