<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_white">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:id="@+id/rb_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man"
            android:layout_marginRight="10dp"/>

        <RadioButton
            android:id="@+id/rb_women"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/women"
            android:layout_marginLeft="10dp"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:textColor="@color/color_main"
            android:background="@drawable/ll_mid_bg" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_gray"/>

        <Button
            android:id="@+id/bt_right"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/right"
            android:textColor="@color/color_main"
            android:layout_alignParentRight="true"
            android:background="@drawable/ll_mid_bg"/>
    </LinearLayout>
</LinearLayout>