<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/edit_bg"
    android:layout_margin="10dp">

    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/ll_mid_bg"
        android:hint="@string/age"
        android:paddingLeft="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:textColor="@color/color_main"
            android:background="@drawable/ll_mid_bg" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_gray"/>

        <Button
            android:id="@+id/bt_right"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/right"
            android:textColor="@color/color_main"
            android:layout_alignParentRight="true"
            android:background="@drawable/ll_mid_bg"/>
    </LinearLayout>
</LinearLayout>