<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/login_top">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_logo"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/tv_lovecar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lovecar"
            android:textSize="26dp"
            android:textColor="@color/color_white"
            android:layout_below="@+id/iv_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/register_bg"
            android:gravity="center_vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_phone"
                android:layout_marginLeft="12dp"/>

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/test_phone"
                android:background="@null"
                android:cursorVisible="false"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/register_bg"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_password"
                android:layout_marginLeft="12dp"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@null"
                android:cursorVisible="false"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/remenber_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/remenber"
                android:layout_alignTop="@+id/remenber"
                android:theme="@style/My_CheckBox"/>
            <TextView
                android:id="@+id/remenber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/remenber_pass"
                android:text="@string/remember_password"
                android:textSize="16dp"
                android:textColor="@color/color_main"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/find_password"
                android:textSize="16dp"
                android:textColor="@color/menuNormalRed"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="18dp"
                android:textColor="@color/color_white"
                android:background="@drawable/send_code"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/register"
            android:textSize="16dp"
            android:textColor="@color/color_gray"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"/>
    </LinearLayout>
</LinearLayout>